--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
            <a href="menu__link">Спорт</a>
            <a href="menu__link">Сериалы</a>
            <a href="menu__link">Мультфильмы</a>
+           <a href="menu__link">Комедия</a>
        </nav>
        
        
